Main ipaddress button style fixed on mobile view

--- a/src/Main/Main.css
+++ b/src/Main/Main.css
@@ -204,5 +204,6 @@
     .header-heading button {
         width: 100%;
         padding: 0;
+        font-size: 3.5rem;
     }
 }
